--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -61,8 +61,8 @@
     "#dir_in     = main_dir + '\\QC_ascii'\n",
     "dir_in     = main_dir + '\\QC_Data_ASCII_slim'\n",
     "# netcdf output folder\n",
-    "dir_out    = main_dir + '\\\\QC_netcdf'\n",
-    "cfileout   = os.path.join(out_dir,'CRHO.nc')"
+    "dir_out    = out_dir + '\\\\QC_netcdf'\n",
+    "cfileout   = os.path.join(dir_out,'CRHO.nc')"
    ]
   },
   {
@@ -136,11 +136,11 @@
      "data": {
       "text/plain": [
        "['BNS_15min_2013_2016_slim.txt',\n",
-       " 'BRP_15min_2014_slim.txt',\n",
+       " 'BRP_15min_2014_2016_slim.txt',\n",
        " 'BWH_15min_2014_slim.txt',\n",
        " 'CRG_15min_2014_slim.txt',\n",
        " 'CRN_15min_2013_2016_slim.txt',\n",
-       " 'FLG_15min_2014-2016_slim.txt',\n",
+       " 'FLG_15min_2014_2016_slim.txt',\n",
        " 'FRG_15min_2014_slim.txt',\n",
        " 'FRS_15min_2013_2016_slim.txt',\n",
        " 'HLN_15min_2014_2015_slim.txt',\n",
@@ -358,35 +358,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Air Moisture Content A\n",
-      "Downward Solar Radiation\n",
-      "Air temperature A\n",
-      "Soil Temperature B\n",
-      "Incremental Precipitation B\n",
-      "Soil Moisture A\n",
-      "Soil Moisture B\n",
-      "Incremental Precipitation A\n",
-      "Snow Depth A\n",
-      "Scalar Wind Speed A\n",
-      "Soil Moisture C\n",
-      "Downward Terrestrial Rad\n",
-      "Scalar Wind Speed B\n",
-      "Upward Terrestrial Rad\n",
       "Soil Temperature C\n",
-      "Total Pressure Unadjusted A\n",
-      "Snow Water Equivelent A\n",
-      "Soil Temperature A\n",
-      "Upward Solar Radiation\n",
-      "Soil Temperature E\n",
-      "Snow Depth QC value\n",
-      "Soil Moisture D\n",
+      "Soil Moisture B\n",
       "Wind Direction at A\n",
-      "Total Pressure Adjusted to Sea-level\n",
+      "Incremental Precipitation B\n",
+      "Soil Temperature B\n",
+      "Snow Depth QC value\n",
+      "Scalar Wind Speed B\n",
+      "Downward Solar Radiation\n",
+      "Scalar Wind Speed A\n",
+      "Downward Terrestrial Rad\n",
+      "Soil Temperature A\n",
+      "Soil Moisture C\n",
+      "Soil Moisture A\n",
       "Snow Layer Temperature A\n",
-      "Soil Heat Flux  A\n",
+      "Soil Moisture E\n",
       "Soil Temperature D\n",
-      "Air Temperature C\n",
-      "Soil Moisture E\n"
+      "Soil Moisture D\n",
+      "Total Pressure Adjusted to Sea-level\n",
+      "Incremental Precipitation A\n",
+      "Soil Heat Flux  A\n",
+      "Upward Solar Radiation\n",
+      "Air temperature A\n",
+      "Snow Depth A\n",
+      "Surface Temperature B\n",
+      "Air Moisture Content A\n",
+      "Upward Terrestrial Rad\n",
+      "Snow Water Equivelent A\n",
+      "Surface Temperature A\n",
+      "Soil Temperature E\n",
+      "Total Pressure Unadjusted A\n"
      ]
     }
    ],
@@ -436,35 +437,36 @@
        "  * station                               (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                                  (time) object 1349028000000000000 ...\n",
        "Data variables:\n",
-       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
-       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
-       "    Air temperature A                     (station, time) float64 nan nan ...\n",
-       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
-       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
-       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
-       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
        "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
-       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
-       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
-       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
        "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
-       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
+       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
+       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
        "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
        "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
-       "    Air Temperature C                     (station, time) float64 nan nan ...\n",
-       "    Soil Moisture E                       (station, time) float64 nan nan ..."
+       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
+       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 nan nan ...\n",
+       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
+       "    Surface Temperature B                 (station, time) float64 nan nan ...\n",
+       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Surface Temperature A                 (station, time) float64 nan nan ...\n",
+       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
+       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 17,
@@ -681,35 +683,36 @@
        "    Lat                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "    Lon                               (station) int64 99 99 99 99 99 99 99 ...\n",
        "Data variables:\n",
-       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
-       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
-       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
        "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
-       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
-       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
        "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
        "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
        "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
-       "    AirTemperatureC                   (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureE                     (station, time) float64 nan nan nan ..."
+       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
+       "    SurfaceTemperatureB               (station, time) float64 nan nan nan ...\n",
+       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    SurfaceTemperatureA               (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ..."
       ]
      },
      "execution_count": 23,
@@ -724,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
