output Nov 2014 storm period netcdf file only. Update plots

--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,10 @@
     "dir_in     = main_dir + '\\QC_Data_ASCII_slim'\n",
     "# netcdf output folder\n",
     "dir_out    = out_dir + '\\\\QC_netcdf'\n",
-    "cfileout   = os.path.join(dir_out,'CRHO.nc')"
+    "# all data out\n",
+    "cfileout         = os.path.join(dir_out,'CRHO.nc')\n",
+    "# Just fortress Nov. 2014 storm out\n",
+    "cfileout_storm   = os.path.join(dir_out,'CRHO_Nov_2014_Storm.nc')"
    ]
   },
   {
@@ -358,36 +361,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soil Temperature C\n",
-      "Soil Moisture B\n",
-      "Wind Direction at A\n",
-      "Incremental Precipitation B\n",
-      "Soil Temperature B\n",
-      "Snow Depth QC value\n",
-      "Scalar Wind Speed B\n",
-      "Downward Solar Radiation\n",
-      "Scalar Wind Speed A\n",
-      "Downward Terrestrial Rad\n",
-      "Soil Temperature A\n",
-      "Soil Moisture C\n",
-      "Soil Moisture A\n",
-      "Snow Layer Temperature A\n",
-      "Soil Moisture E\n",
-      "Soil Temperature D\n",
-      "Soil Moisture D\n",
-      "Total Pressure Adjusted to Sea-level\n",
-      "Incremental Precipitation A\n",
-      "Soil Heat Flux  A\n",
-      "Upward Solar Radiation\n",
-      "Air temperature A\n",
-      "Snow Depth A\n",
-      "Surface Temperature B\n",
       "Air Moisture Content A\n",
+      "Soil Moisture E\n",
+      "Soil Moisture B\n",
+      "Soil Moisture D\n",
+      "Soil Temperature B\n",
+      "Downward Solar Radiation\n",
+      "Upward Solar Radiation\n",
       "Upward Terrestrial Rad\n",
-      "Snow Water Equivelent A\n",
-      "Surface Temperature A\n",
+      "Soil Heat Flux  A\n",
+      "Snow Depth A\n",
+      "Snow Layer Temperature A\n",
+      "Soil Moisture A\n",
       "Soil Temperature E\n",
-      "Total Pressure Unadjusted A\n"
+      "Surface Temperature A\n",
+      "Air temperature A\n",
+      "Incremental Precipitation A\n",
+      "Snow Water Equivelent A\n",
+      "Wind Direction at A\n",
+      "Scalar Wind Speed B\n",
+      "Incremental Precipitation B\n",
+      "Surface Temperature B\n",
+      "Total Pressure Adjusted to Sea-level\n",
+      "Snow Depth QC value\n",
+      "Soil Moisture C\n",
+      "Soil Temperature C\n",
+      "Total Pressure Unadjusted A\n",
+      "Soil Temperature D\n",
+      "Scalar Wind Speed A\n",
+      "Soil Temperature A\n",
+      "Downward Terrestrial Rad\n"
      ]
     }
    ],
@@ -437,36 +440,36 @@
        "  * station                               (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                                  (time) object 1349028000000000000 ...\n",
        "Data variables:\n",
-       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
-       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
-       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
-       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
-       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
-       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
-       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
-       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
-       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
-       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
-       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Air temperature A                     (station, time) float64 nan nan ...\n",
-       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Surface Temperature B                 (station, time) float64 nan nan ...\n",
        "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
+       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
+       "    Soil Moisture D                       (station, time) float64 nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
        "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
-       "    Surface Temperature A                 (station, time) float64 nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
+       "    Snow Layer Temperature A              (station, time) object nan nan nan ...\n",
+       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
        "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
-       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ..."
+       "    Surface Temperature A                 (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
+       "    Surface Temperature B                 (station, time) float64 nan nan ...\n",
+       "    Total Pressure Adjusted to Sea-level  (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) object nan nan nan ...\n",
+       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
+       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
+       "    Total Pressure Unadjusted A           (station, time) float64 nan nan ...\n",
+       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 17,
@@ -549,95 +552,95 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>BNS</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>50.820920</td>\n",
+       "      <td>-115.213910</td>\n",
        "      <td>2099</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PWL</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>50.825980</td>\n",
+       "      <td>-115.198200</td>\n",
        "      <td>2100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FRS</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>50.838230</td>\n",
+       "      <td>-115.215780</td>\n",
        "      <td>2330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CRN</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>50.670700</td>\n",
+       "      <td>-123.191700</td>\n",
        "      <td>2205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BRP</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
        "      <td>9999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FLG</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>9999</td>\n",
+       "      <td>50.830040</td>\n",
+       "      <td>-115.228510</td>\n",
+       "      <td>2565</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PYT</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>51.509340</td>\n",
+       "      <td>-123.442020</td>\n",
        "      <td>9999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BWH</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>9999</td>\n",
+       "      <td>51.635180</td>\n",
+       "      <td>-116.490280</td>\n",
+       "      <td>2421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CRG</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>9999</td>\n",
+       "      <td>50.670590</td>\n",
+       "      <td>-123.191640</td>\n",
+       "      <td>2211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FRG</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>50.836420</td>\n",
+       "      <td>-115.220490</td>\n",
        "      <td>9999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SIB</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>9999</td>\n",
+       "      <td>51.055630</td>\n",
+       "      <td>-114.869420</td>\n",
+       "      <td>1490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HLN</th>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>9999</td>\n",
+       "      <td>51.693027</td>\n",
+       "      <td>-116.420957</td>\n",
+       "      <td>2535</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          lat   long   elevation(m)\n",
-       "station                            \n",
-       "BNS        99     99           2099\n",
-       "PWL        99     99           2100\n",
-       "FRS        99     99           2330\n",
-       "CRN        99     99           2205\n",
-       "BRP        99     99           9999\n",
-       "FLG        99     99           9999\n",
-       "PYT        99     99           9999\n",
-       "BWH        99     99           9999\n",
-       "CRG        99     99           9999\n",
-       "FRG        99     99           9999\n",
-       "SIB        99     99           9999\n",
-       "HLN        99     99           9999"
+       "               lat        long   elevation(m)\n",
+       "station                                      \n",
+       "BNS      50.820920 -115.213910           2099\n",
+       "PWL      50.825980 -115.198200           2100\n",
+       "FRS      50.838230 -115.215780           2330\n",
+       "CRN      50.670700 -123.191700           2205\n",
+       "BRP      99.000000   99.000000           9999\n",
+       "FLG      50.830040 -115.228510           2565\n",
+       "PYT      51.509340 -123.442020           9999\n",
+       "BWH      51.635180 -116.490280           2421\n",
+       "CRG      50.670590 -123.191640           2211\n",
+       "FRG      50.836420 -115.220490           9999\n",
+       "SIB      51.055630 -114.869420           1490\n",
+       "HLN      51.693027 -116.420957           2535"
       ]
      },
      "execution_count": 21,
@@ -680,39 +683,39 @@
        "  * station                           (station) object 'BNS' 'BRP' 'BWH' ...\n",
        "  * time                              (time) datetime64[ns] 2012-09-30T18:00:00 ...\n",
        "    Elevation                         (station) int64 2099 2100 2330 2205 ...\n",
-       "    Lat                               (station) int64 99 99 99 99 99 99 99 ...\n",
-       "    Lon                               (station) int64 99 99 99 99 99 99 99 ...\n",
+       "    Lat                               (station) float64 50.82 50.83 50.84 ...\n",
+       "    Lon                               (station) float64 -115.2 -115.2 -115.2 ...\n",
        "Data variables:\n",
-       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
-       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
-       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
-       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
-       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
-       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
-       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    SurfaceTemperatureB               (station, time) float64 nan nan nan ...\n",
        "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureD                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
        "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
-       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
-       "    SurfaceTemperatureA               (station, time) float64 nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
+       "    SnowLayerTemperatureA             (station, time) object nan nan nan nan ...\n",
+       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
        "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
-       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ..."
+       "    SurfaceTemperatureA               (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
+       "    SurfaceTemperatureB               (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureAdjustedtoSea-level  (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) object nan nan nan nan ...\n",
+       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureUnadjustedA          (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ..."
       ]
      },
      "execution_count": 23,
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -739,30 +742,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Trim to nov 2014 storm\n",
+    "ds_storm = ds_all.sel(time=pd.date_range(start=datetime(2014,10,1),end=datetime(2014,12,15),freq='15min'))\n",
+    "ds_storm.to_netcdf(cfileout_storm,format='netcdf4') "
+   ]
   }
  ],
  "metadata": {
